--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "expo": "^25.0.0",
     "react": "16.2.0",
+    "react-gradient-view": "0.0.3",
     "react-native": "0.52.0",
+    "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.5.4",
     "tcomb-form-native": "^0.6.11"
   }
