--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.2.0",
     "react-gradient-view": "0.0.3",
     "react-native": "0.52.0",
+    "react-native-elements": "^0.19.0",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.5.4",
     "tcomb-form-native": "^0.6.11"
