--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "expo": "^25.0.0",
+    "npm": "^5.6.0",
     "react": "16.2.0",
     "react-gradient-view": "0.0.3",
     "react-native": "0.52.0",
