--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "^7.0.0",
+    "cordova-android": "7.1.1",
     "cordova-browser": "5.0.3",
     "cordova-ios": "^4.5.4",
     "cordova-plugin-advanced-http": "^1.11.1",
@@ -44,6 +44,7 @@
     "plug": "^0.2.4",
     "rxjs": "5.5.10",
     "sw-toolbox": "3.6.0",
+    "webrowser": "0.0.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
