Updated mirror link service + json config + api service

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -6,7 +6,7 @@
   "type": "ionic-angular",
   "proxies": [
     {
-      "path": "/api",
+      "path": "/elios",
       "proxyUrl": "http://dev.elios-mirror.com/"
     }
   ],
