--- a/ionic.config.json
+++ b/ionic.config.json
@@ -7,7 +7,7 @@
   "proxies": [
     {
       "path": "/elios",
-      "proxyUrl": "http://dev.elios-mirror.com/"
+      "proxyUrl": "http://dev.elios-mirror.com"
     }
   ],
   "pro_id": "4296fc26"
