Fix IOS request and compilation

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -6,7 +6,7 @@
   "type": "ionic-angular",
   "proxies": [
     {
-      "path": "/elios",
+      "path": "/api",
       "proxyUrl": "http://dev.elios-mirror.com"
     }
   ],
