--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.1.1",
     "cordova-browser": "5.0.3",
-    "cordova-ios": "^4.5.4",
+    "cordova-ios": "4.5.5",
+    "cordova-plugin-add-swift-support": "^1.7.2",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
@@ -38,9 +39,11 @@
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-qrscanner": "^2.6.0",
     "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "ios-deploy": "^1.9.3",
     "plug": "^0.2.4",
     "rxjs": "5.5.10",
     "sw-toolbox": "3.6.0",
@@ -60,7 +63,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-advanced-http": {},
-      "cordova-plugin-qrscanner": {}
+      "cordova-plugin-qrscanner": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "android",
