--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
+    "ionic-native-http-connection-backend": "^4.0.7",
     "ionicons": "3.0.0",
     "plug": "^0.2.4",
     "rxjs": "5.5.10",
