--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Elios",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "version": "1.0.0",
+  "author": "Elios Team",
+  "homepage": "https://elios-mirror.com/",
   "private": true,
   "scripts": {
     "clean": "ionic-app-scripts clean",
@@ -15,66 +15,56 @@
     "test-coverage": "karma start ./test-config/karma.conf.js --coverage"
   },
   "dependencies": {
-    "@angular/animations": "5.2.10",
-    "@angular/common": "5.2.10",
-    "@angular/compiler": "5.2.10",
-    "@angular/compiler-cli": "5.2.10",
-    "@angular/core": "5.2.10",
-    "@angular/forms": "5.2.10",
-    "@angular/http": "5.2.10",
-    "@angular/platform-browser": "5.2.10",
-    "@angular/platform-browser-dynamic": "5.2.10",
-    "@ionic-native/core": "4.7.0",
-    "@ionic-native/http": "^4.7.0",
-    "@ionic-native/qr-scanner": "^4.12.2",
-    "@ionic-native/splash-screen": "4.7.0",
-    "@ionic-native/status-bar": "4.7.0",
-    "@ionic/pro": "1.0.20",
-    "@ionic/storage": "2.1.3",
-    "cordova-android": "7.1.1",
-    "cordova-browser": "5.0.3",
-    "cordova-ios": "4.5.5",
+    "@angular-devkit/core": "^7.3.5",
+    "@angular-devkit/schematics": "^7.3.5",
+    "@angular/animations": "^7.2.8",
+    "@angular/common": "^7.2.8",
+    "@angular/compiler": "^7.2.8",
+    "@angular/compiler-cli": "^7.2.8",
+    "@angular/core": "^7.2.8",
+    "@angular/forms": "^7.2.8",
+    "@angular/http": "^7.2.8",
+    "@angular/platform-browser": "^7.2.8",
+    "@angular/platform-browser-dynamic": "^7.2.8",
+    "@angular/router": "^7.2.8",
+    "@ionic-native/clipboard": "^5.1.0",
+    "@ionic-native/core": "^5.1.0",
+    "@ionic-native/email-composer": "^5.1.0",
+    "@ionic-native/http": "^5.1.0",
+    "@ionic-native/in-app-browser": "^5.1.0",
+    "@ionic-native/keyboard": "^5.1.0",
+    "@ionic-native/qr-scanner": "^5.2.0",
+    "@ionic-native/screen-orientation": "^5.1.0",
+    "@ionic-native/splash-screen": "^5.1.0",
+    "@ionic-native/status-bar": "^5.1.0",
+    "@ionic/angular": "^4.0.1",
+    "@ionic/storage": "^2.2.0",
+    "cordova-android": "^8.0.0",
+    "cordova-browser": "^6.0.0",
+    "cordova-ios": "^5.0.0",
     "cordova-plugin-add-swift-support": "^1.7.2",
-    "cordova-plugin-advanced-http": "^1.11.1",
+    "cordova-plugin-advanced-http": "^2.0.5",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
-    "cordova-plugin-ionic-keyboard": "^2.1.2",
-    "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^4.0.0",
     "cordova-plugin-qrscanner": "^2.6.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "ionic-angular": "3.9.2",
-    "ionic-native-http-connection-backend": "^4.0.7",
+    "ionic": "^4.11.0",
+    "ionic-angular": "^3.9.4",
+    "ionic-native-http-connection-backend": "^5.0.4",
     "ionicons": "3.0.0",
-    "plug": "^0.2.4",
-    "rxjs": "5.5.10",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
     "sw-toolbox": "3.6.0",
     "webrowser": "0.0.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.8",
-    "@ionic/app-scripts": "3.1.9",
-    "@types/jasmine": "^2.5.41",
-    "@types/node": "^8.0.45",
-    "angular2-template-loader": "^0.6.2",
-    "html-loader": "^0.5.1",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "jasmine": "^2.5.3",
-    "jasmine-spec-reporter": "^4.1.0",
-    "karma": "^1.5.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.3",
-    "null-loader": "^0.1.1",
-    "protractor": "^5.1.1",
-    "ts-loader": "^3.0.3",
-    "ts-node": "^3.0.2",
-    "typescript": "~2.6.2"
+    "@ionic/app-scripts": "^3.2.3",
+    "typescript": "^3.2.4"
   },
   "description": "An Ionic project",
   "cordova": {
