--- a/ionic.config.json
+++ b/ionic.config.json
@@ -7,7 +7,7 @@
   "proxies": [
     {
       "path": "/api",
-      "proxyUrl": "http://127.0.0.1:8000"
+      "proxyUrl": "http://dev.elios-mirror.com"
     }
   ],
   "id": "4296fc26"
