--- a/package.json
+++ b/package.json
@@ -64,7 +64,27 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "^3.2.3",
-    "typescript": "^3.2.4"
+    "typescript": "^3.2.4",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^2.0.3",
+    "@types/jasmine": "^2.5.41",
+    "@types/node": "^8.0.45",
+    "angular2-template-loader": "^0.6.2",
+    "html-loader": "^0.5.1",
+    "istanbul-instrumenter-loader": "^3.0.0",
+    "jasmine": "^2.5.3",
+    "null-loader": "^0.1.1",
+    "ts-loader": "^3.0.3",
+    "ts-node": "^3.0.2"
   },
   "description": "An Ionic project",
   "cordova": {
