--- a/ionic.config.json
+++ b/ionic.config.json
@@ -7,7 +7,7 @@
   "proxies": [
     {
       "path": "/api",
-      "proxyUrl": "https://api.elios-mirror.com"
+      "proxyUrl": "https://dev.elios-mirror.com"
     }
   ],
   "id": "4296fc26"
