--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/http": "^5.13.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "^8.0.0",
+    "cordova-browser": "^6.0.0",
+    "cordova-plugin-advanced-http": "^2.1.1",
+    "cordova-plugin-file": "^6.0.2",
     "core-js": "^2.5.4",
+    "ionic-native-http-connection-backend": "^5.0.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
@@ -73,10 +78,12 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-advanced-http": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
