--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic/storage": "^2.2.0",
     "cordova-android": "^8.0.0",
     "cordova-browser": "^6.0.0",
+    "cordova-ios": "^5.0.1",
     "cordova-plugin-advanced-http": "^2.1.1",
     "cordova-plugin-file": "^6.0.2",
     "core-js": "^2.5.4",
@@ -88,7 +89,8 @@
     },
     "platforms": [
       "android",
-      "browser"
+      "browser",
+      "ios"
     ]
   }
 }
